[package]
name = "edlang"
version = "0.1.0"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "A experimental language using LLVM."
edition = "2021"
readme = "README.md"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
color-eyre = "0.6.2"
itertools = "0.10.5"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
regex = "1.8.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
annotate-snippets = { version = "0.9.1", features = ["color"] }
logos = "0.13.0"

[build-dependencies]
lalrpop = "0.20.0"
