[package]
name = "edb"
version = "0.0.1-alpha.14"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "The edlang language builder."
edition = "2021"
readme = "README.md"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]
documentation = "https://docs.rs/edlang"
repository = "https://github.com/edg-l/edlang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edlang_driver = { version = "0.0.1-alpha.14", path = "../lib/edlang_driver" }
anyhow = "1"
clap = { version = "4.4.16", features = ["derive"] }
toml = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
git2 = "0.18.2"
owo-colors = "4.0.0"
