[package]
name = "edlang_ast"
version = "0.0.1-alpha.3"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "edlang AST"
edition = "2021"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edlang_span = { version = "0.0.1-alpha.3", path = "../edlang_span" }
