[package]
name = "edlang_check"
version = "0.0.1-alpha.3"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "edlang check"
edition = "2021"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]
documentation = "https://docs.rs/edlang_check"
repository = "https://github.com/edg-l/edlang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.4.0", features = ["auto-color"] }
edlang_ast = { version = "0.0.1-alpha.3", path = "../edlang_ast" }
tracing = { workspace = true }
