[package]
name = "edlang_codegen_mlir"
version = "0.1.0"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "edlang MLIR codegen"
edition = "2021"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.14.0", features = ["std"] }
edlang_ir = { version = "0.1.0", path = "../edlang_ir" }
edlang_parser = { version = "0.1.0", path = "../edlang_parser" }
edlang_session = { version = "0.1.0", path = "../edlang_session" }
llvm-sys = "170.0.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "e0cc92dc28eb684684e450ca28daedc52e613962", features = ["llvm17-0"] }
tracing = { workspace = true }
edlang_span = { version = "0.1.0", path = "../edlang_span" }

[build-dependencies]
cc = "1.0.83"
