[package]
name = "edlang_driver"
version = "0.1.0"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "edlang compiler driver library"
edition = "2021"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.4.0", features = ["auto-color"] }
clap = { version = "4.4.16", features = ["derive"] }
color-eyre = "0.6.2"
edlang_ast = { version = "0.1.0", path = "../edlang_ast" }
edlang_check = { version = "0.1.0", path = "../edlang_check" }
edlang_codegen_mlir = { version = "0.1.0", path = "../edlang_codegen_mlir" }
edlang_parser = { version = "0.1.0", path = "../edlang_parser" }
edlang_session = { version = "0.1.0", path = "../edlang_session" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
