[package]
name = "edlang_ir"
version = "0.0.1-alpha.8"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "edlang IR"
edition = "2021"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]
documentation = "https://docs.rs/edlang_ir"
repository = "https://github.com/edg-l/edlang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edlang_span = { version = "0.0.1-alpha.8", path = "../edlang_span" }
smallvec = "1.13.1"
