[package]
name = "edlang_lowering"
version = "0.0.1-alpha.16"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "edlang lowering"
edition = "2021"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]
documentation = "https://docs.rs/edlang_lowering"
repository = "https://github.com/edg-l/edlang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edlang_ast = { version = "0.0.1-alpha.16", path = "../edlang_ast" }
edlang_ir = { version = "0.0.1-alpha.16", path = "../edlang_ir" }
tracing.workspace = true
thiserror = "1.0.57"
