[package]
name = "edlang_parser"
version = "0.0.1-alpha.16"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "edlang parser"
edition = "2021"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]
documentation = "https://docs.rs/edlang_parser"
repository = "https://github.com/edg-l/edlang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.4.0", features = ["auto-color"] }
edlang_ast = { version = "0.0.1-alpha.16", path = "../edlang_ast" }
itertools = "0.12.1"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
logos = "0.14.0"
tracing = { workspace = true }

[build-dependencies]
lalrpop = "0.20.2"
