[package]
name = "edlang_session"
version = "0.0.1-alpha.17"
authors = ["Edgar Luque <edgar@edgarluque.com>"]
description = "edlang session"
edition = "2021"
keywords = ["llvm", "compiler"]
license = "AGPL-3.0-only"
categories = ["compilers"]
documentation = "https://docs.rs/edlang_session"
repository = "https://github.com/edg-l/edlang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.4.1", features = ["auto-color"] }
